<resources>
    <string name="app_name">RiskyRacer</string>
    <string name="menu_title">Risky Racer</string>
    <string name="new_game">Nowa gra</string>
    <string name="high_scores">Najlepsze wyniki</string>
    <string name="settings">Ustawienia</string>
    <string name="music">Muzyka</string>
    <string name="vibrations">Wibracje</string>
    <string name="game_over">Koniec gry!</string>
    <string name="score">Twój wynik to: </string>
    <string name="try_again">Spróbuj ponownie</string>
    <string name="menu">Menu glówne</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>