<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/gameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_title"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="406dp"
        android:layout_height="278dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832"
        tools:gravity="center">

        <Button
            android:id="@+id/newGameBtn"
            android:layout_width="188dp"
            android:layout_height="46dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#ffaf65"
            android:onClick="loadGameActivity"
            android:text="@string/new_game"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/highScoresBtn"
            android:layout_width="188dp"
            android:layout_height="46dp"
            android:layout_margin="20dp"
            android:backgroundTint="#ffaf65"
            android:onClick="loadHighScoresActivity"
            android:text="@string/high_scores" />

        <Button
            android:id="@+id/settingsBtn"
            android:layout_width="188dp"
            android:layout_height="46dp"
            android:layout_margin="20dp"
            android:backgroundTint="#ffaf65"
            android:onClick="loadSettingsActivity"
            android:text="@string/settings" />

    </LinearLayout>

    <ImageView
        android:id="@+id/carImg"
        android:layout_width="405dp"
        android:layout_height="208dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameName"
        app:srcCompat="@drawable/car_svg" />

</androidx.constraintlayout.widget.ConstraintLayout>